tz-local/resource/monitoring/alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-alertmanager
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
#    nginx.ingress.kubernetes.io/auth-type: basic
#    nginx.ingress.kubernetes.io/auth-secret: basic-auth-alertmanager
#    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - admin'
spec:
  rules:
#  - host: alertmanager.eks_domain
#    http:
#      paths:
#      - path: /
#        backend:
#          serviceName: prometheus-kube-prometheus-alertmanager
#          servicePort: 9093
  - host: alertmanager.default.eks_project.eks_domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-kube-prometheus-alertmanager
            port:
              number: 9093
  tls:
    - hosts:
#        - alertmanager.eks_domain
        - alertmanager.default.eks_project.eks_domain
      secretName: ingress-alertmanager-tls
