tz-local/resource/monitoring/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-grafana
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
#    nginx.ingress.kubernetes.io/auth-type: basic
#    nginx.ingress.kubernetes.io/auth-secret: basic-auth-grafana
#    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - admin'
spec:
  rules:
#  - host: grafana.eks_domain
#    http:
#      paths:
#      - path: /
#        backend:
#          serviceName: prometheus-grafana
#          servicePort: 3000
  - host: grafana.default.eks_project.eks_domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 3000
  tls:
    - hosts:
#        - grafana.eks_domain
        - grafana.default.eks_project.eks_domain
      secretName: ingress-grafana-tls
